--- a/packages/ipfs-service/package.json
+++ b/packages/ipfs-service/package.json
@@ -3,7 +3,6 @@
   "description": "IPFS client and utilities for BuilderOSS apps",
   "version": "0.1.3",
   "dependencies": {
-    "@biglup/is-cid": "^1.0.3",
     "sha.js": "^2.4.12"
   },
   "devDependencies": {
@@ -21,6 +20,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.mjs",
+      "require": "./dist/*.js"
     }
   },
   "files": [
