--- a/packages/ipfs-service/tsconfig.json
+++ b/packages/ipfs-service/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@buildeross/tsconfig/react-library.json",
-  "include": ["."]
+  "compilerOptions": {
+    "moduleResolution": "bundler"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
