--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -32,6 +32,7 @@
     "@tanstack/react-query": "^5.90.3",
     "@vanilla-extract/next-plugin": "^2.4.11",
     "@vanilla-extract/recipes": "^0.5.7",
+    "axios": "^1.12.2",
     "next": "^15.3.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
