--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,5 +1,5 @@
 # DO NOT ADD SECRETS TO THIS FILE. This is a good place for defaults.
 # If you want to add secrets use `.env.local` instead.
 
-NEXT_PUBLIC_IPFS_GATEWAY=https://ipfs.decentralized-content.com
+NEXT_PUBLIC_PINATA_GATEWAY="nouns-builder.mypinata.cloud"
 NEXT_PUBLIC_NETWORK_TYPE=testnet
