--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -22,7 +22,7 @@
     "deploy:subgraph": "pnpm clean && pnpm deploy:only",
     "graph:build": "graph build",
     "graph:codegen": "graph codegen",
-    "test": "graph test",
+    "graph:test": "graph test",
     "lint": "eslint src tests --fix",
     "local-node": "docker compose up",
     "remove:local": "graph remove --node http://localhost:8020/ nouns-builder"
