--- a/packages/sdk/codegen.yml
+++ b/packages/sdk/codegen.yml
@@ -1,15 +1,7 @@
 generates:
   src/subgraph/sdk.generated.ts:
-    schema: 'https://api.goldsky.com/api/public/project_cm33ek8kjx6pz010i2c3w8z25/subgraphs/nouns-builder-ethereum-sepolia/latest/gn'
+    schema: 'https://api.goldsky.com/api/public/project_cm33ek8kjx6pz010i2c3w8z25/subgraphs/nouns-builder-ethereum-sepolia/0.1.4/gn'
     documents: 'src/subgraph/**/*.graphql'
-    plugins:
-      - typescript
-      - typescript-operations
-      - typescript-graphql-request
-
-  src/eas/sdk.generated.ts:
-    schema: 'https://easscan.org/graphql'
-    documents: 'src/eas/**/*.graphql'
     plugins:
       - typescript
       - typescript-operations
