--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,8 +13,7 @@
     "react-portal": "^4.3.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1",
-    "remove-markdown": "^0.6.2"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@buildeross/constants": "workspace:*",
