--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "@buildeross/create-dao-ui": "workspace:*",
     "@buildeross/create-proposal-ui": "workspace:*",
     "@buildeross/dao-ui": "workspace:*",
+    "@buildeross/feed-ui": "workspace:*",
     "@buildeross/hooks": "workspace:*",
     "@buildeross/ipfs-service": "workspace:*",
     "@buildeross/proposal-ui": "workspace:*",
