--- a/packages/feed-ui/package.json
+++ b/packages/feed-ui/package.json
@@ -3,7 +3,8 @@
   "description": "Feed UI components for BuilderOSS apps",
   "version": "0.2.1",
   "dependencies": {
-    "@vanilla-extract/css": "^1.17.2"
+    "@vanilla-extract/css": "^1.17.2",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@buildeross/auction-ui": "workspace:*",
