--- a/packages/feed-ui/package.json
+++ b/packages/feed-ui/package.json
@@ -3,6 +3,7 @@
   "description": "Feed UI components for BuilderOSS apps",
   "version": "0.2.1",
   "dependencies": {
+    "zustand": "^5.0.4",
     "@vanilla-extract/css": "^1.17.2",
     "swr": "^2.3.3"
   },
@@ -26,6 +27,7 @@
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
     "eslint": "8.57.1",
     "tsup": "^8.3.5",
+    "zustand": "^5.0.4",
     "typescript": "^5.8.3"
   },
   "exports": {
