--- a/packages/feed-ui/package.json
+++ b/packages/feed-ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "zustand": "^5.0.4",
     "@vanilla-extract/css": "^1.17.2",
+    "formik": "^2.4.6",
     "swr": "^2.3.3"
   },
   "devDependencies": {
