--- a/packages/feed-ui/package.json
+++ b/packages/feed-ui/package.json
@@ -3,10 +3,10 @@
   "description": "Feed UI components for BuilderOSS apps",
   "version": "0.2.1",
   "dependencies": {
-    "zustand": "^5.0.4",
     "@vanilla-extract/css": "^1.17.2",
     "formik": "^2.4.6",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@buildeross/auction-ui": "workspace:*",
@@ -28,8 +28,8 @@
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
     "eslint": "8.57.1",
     "tsup": "^8.3.5",
-    "zustand": "^5.0.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zustand": "^5.0.4"
   },
   "exports": {
     ".": {
@@ -59,8 +59,8 @@
     "@buildeross/ui": "0.2.1",
     "@buildeross/utils": "0.2.1",
     "@buildeross/zord": "0.2.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "viem": "^2.38.2",
     "wagmi": "^2.18.1"
   },
