--- a/packages/create-proposal-ui/package.json
+++ b/packages/create-proposal-ui/package.json
@@ -14,6 +14,7 @@
     "@zoralabs/protocol-deployments": "^0.6.4",
     "axios": "^1.12.2",
     "bs58": "^6.0.0",
+    "clanker-sdk": "^4.2.8",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
