--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,9 +44,10 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-mde": "^11.5.0",
+    "sablier": "^2.0.1",
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
-    "viem": "^2.38.2",
+    "viem": "^2.44.2",
     "wagmi": "^2.18.1"
   },
   "devDependencies": {
@@ -68,6 +69,7 @@
     "@vanilla-extract/css": "^1.17.2",
     "@vanilla-extract/vite-plugin": "^5.0.2",
     "@vitejs/plugin-react": "^4.5.0",
+    "baseline-browser-mapping": "^2.9.18",
     "dotenv": "^16.5.0",
     "eslint": "8.57.1",
     "eslint-config-next": "15.5.5",
