--- a/packages/constants/tsconfig.json
+++ b/packages/constants/tsconfig.json
@@ -4,7 +4,8 @@
     "types": ["node", "@buildeross/types/globals"],
     "outDir": "./dist",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
