--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.1",
   "dependencies": {
     "bignumber.js": "^9.3.0",
+    "sablier": "^2.0.1",
     "tinycolor2": "^1.4.2",
     "wink-porter2-stemmer": "^2.0.1"
   },
@@ -27,6 +28,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./sablier": {
+      "types": "./dist/sablier/index.d.ts",
+      "import": "./dist/sablier/index.mjs",
+      "require": "./dist/sablier/index.js"
     },
     "./wagmi": {
       "types": "./dist/wagmi/index.d.ts",
@@ -57,7 +63,7 @@
     "@buildeross/constants": "0.2.1",
     "@buildeross/ipfs-service": "0.2.1",
     "@buildeross/types": "0.2.1",
-    "viem": "^2.38.2",
+    "viem": "^2.44.2",
     "wagmi": "^2.18.1",
     "yup": "^1.6.1"
   },
