--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,11 +3,13 @@
   "description": "Comprehensive UI components library for BuilderOSS apps",
   "version": "0.2.2",
   "dependencies": {
+    "@uniswap/v3-sdk": "^3.27.0",
     "@vanilla-extract/css": "^1.17.2",
     "@vanilla-extract/recipes": "^0.5.7",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
+    "jsbi": "^4.3.2",
     "react-markdown": "^10.1.0",
     "react-mde": "^11.5.0",
     "react-portal": "^4.3.0",
