--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.2",
   "dependencies": {
     "bignumber.js": "^9.3.0",
+    "decimal.js": "^10.6.0",
     "sablier": "^2.0.1",
     "tinycolor2": "^1.4.2",
     "wink-porter2-stemmer": "^2.0.1"
