--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
     "ETHERSCAN_API_KEY",
     "AI_GATEWAY_API_KEY",
     "AI_MODEL",
+    "NEXT_PUBLIC_COINING_ENABLED",
     "NEXT_PUBLIC_DISABLE_AI_SUMMARY",
     "NEXT_PUBLIC_DISABLE_TENDERLY_SIMULATION",
     "NEXT_PUBLIC_PINATA_GATEWAY",
